# foodrecsys_thesiss

./: .env.example  .gitignore  Dockerfile  check_db.py  docker-compose.yml  evaluate.py  evaluation_recommendation.py  evaluation_user.py  main.py  pyproject.toml  test.py  users_survey_1.json
.github/instructions/: Ingredient Extractions.instructions.md  System Requiremens.instructions.md
docs/: CLIP_EMBEDDER_EXPLANATION_VI.md  COLLABORATIVE_FILTERING_FORMULAS.md  COSINE_SIMILARITY_EXPLANATION.md  DIETARY_RESTRICTIONS_EXPLANATION_VI.md  GEMMA_EXTRACTOR_EXPLANATION_VI.md  INGREDIENT_EMBEDDER_EXPLANATION_VI.md  MODEL_EXPLANATION_VI.md  README.md  SIMILARITY_SCORE_EXPLANATION.md  api-reference.md  architecture.md  configuration.md  database-schema.md  development.md  getting-started.md
notebooks/: eda.ipynb
src/: config.py
src/api/: __init__.py  routes.py
src/data/: __init__.py  canonical_ingredients.py  dietary_restrictions.py
src/pipeline/: batch_processor.py
src/services/: __init__.py  clip_embedder.py  evaluation_service.py  gemma_extractor.py  ingredient_canonicalizer.py  ingredient_embedder.py  neo4j_service.py  recommendation_service.py
src/visualization/: dish_aggregator.py  recommendation_page.py  similarity.py  streamlit_app.py  upload_page.py
tests/: prompt_test_result.json  test_gemma_prompt.py
